Fixed text aligning in code blocks

--- a/md.css
+++ b/md.css
@@ -20,6 +20,7 @@ pre {
   margin-left: auto;
   margin-right: auto;
   max-width: 75%;
+  text-align: left;
 }
 pre code {
   display: inline;
